# hello-grpc

./: pom.xml
hello-grpc-client/: pom.xml
hello-grpc-client/src/main/golang/: README.md  go.mod  main.go
hello-grpc-client/src/main/resources/: application.yml
hello-grpc-client/src/main/rust/: Cargo.toml  README.md  build.rs
hello-grpc-client/src/main/rust/proto/: helloworld.rs  say.proto  say.rs
hello-grpc-client/src/main/rust/src/: client.rs  lib.rs  main.rs  server.rs
hello-grpc-core/: pom.xml
hello-grpc-core/src/main/proto/: date_service.pb.go  date_service.proto  date_service_grpc.pb.go  user_provider.pb.go  user_provider.proto  user_provider_grpc.pb.go
hello-grpc-core/src/main/resources/: application.yml.template
hello-grpc-sdk/: pom.xml
hello-grpc-sdk/src/main/proto/accesscontrol/: member.proto
hello-grpc-sdk/src/main/proto/api/: rpc_node.proto
hello-grpc-sdk/src/main/proto/common/: block.proto  contract.proto  request.proto  result.proto  transaction.proto
hello-grpc-sdk/src/main/proto/config/: chain_config.proto
hello-grpc-sdk/src/main/proto/consensus/: consensus.proto
hello-grpc-sdk/src/main/proto/net/: net.proto
hello-grpc-sdk/src/main/proto/store/: store.proto
hello-grpc-sdk/src/main/proto/syscontract/: account_manager.proto  chain_config.proto  chain_query.proto  cross_transaction.proto  multi_sign.proto  subscribe.proto  (+1 more)
hello-grpc-sdk/src/test/resources/: logback-test.xml  sdk_config.yml  sdk_config_pk.yml  sdk_config_pwk.yml
hello-grpc-server/: pom.xml
hello-grpc-server/src/main/resources/: application.yml
(+235 files in other folders)
