[package]
name = "hello-grpc-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = [
    "./src/**/*",
    "./proto/**",
]

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
protobuf = "3.1.0"
protobuf-codegen = "3.1.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }


[build-dependencies]
tonic-build = "0.7.2"
